--- a/src/vista/frm_Ventas.form
+++ b/src/vista/frm_Ventas.form
@@ -512,6 +512,7 @@
         <Component class="javax.swing.JTextField" name="txt_NumeroSerie">
           <Properties>
             <Property name="editable" type="boolean" value="false"/>
+            <Property name="text" type="java.lang.String" value="667"/>
           </Properties>
           <AuxValues>
             <AuxValue name="JavaCodeGenerator_VariableModifier" type="java.lang.Integer" value="1"/>
